--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="theme_1">Тема 1</string>
     <string name="theme_2">Тема 2</string>
     <string name="theme_3">Тема 3</string>
+    <string name="select_date">Выберите дату</string>
 </resources>
