--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="photo_of_the_day_stub">Photo of the day</string>
     <string name="search_wiki">Найти в Википедии</string>
     <string name="wiki_helper_text">Поищите термин в википедии</string>
-    <string name="favourite">favourite</string>
-    <string name="settings">settings</string>
+    <string name="favourite">Избранное</string>
+    <string name="settings">Настройки</string>
     <string name="search">Search</string>
     <string name="hd">HD</string>
     <string name="yesterday">Вчера</string>
@@ -21,4 +21,8 @@
     <string name="sun_photo">sun photo</string>
     <string name="mars_photo">mars photo</string>
     <string name="earth_photo">earth photo</string>
+    <string name="notes">Заметки</string>
+    <string name="title">Название</string>
+    <string name="body">Описание</string>
+    <string name="save">Сохранить</string>
 </resources>
